# sentence_binder

./: .gitignore  .sqruff  .stylelintrc.json  Cargo.toml  README.md  biome.json  justfile  package.json  pyproject.toml  renovate.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_add_fts.sql
src-tauri/src/: capture.rs  commands.rs  constants.rs  credentials.rs  db.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  main.rs
src-tauri/src/commands/: audio.rs  credentials.rs  db.rs  llm.rs
src-tauri/src/db/: sentences.rs
src-tauri/src/domain/: engine.rs  models.rs  provider.rs
src-tauri/src/infrastructure/: mlx.rs
src-tauri/src/scripts/: get_active_context.js
src/components/layout/: Sidebar.tsx
src/components/ui/: button.tsx  highlight-text.tsx  input.tsx  scroll-area.tsx  sonner.tsx  textarea.tsx
src/features/practice/components/: PracticeCard.tsx  PracticeControls.tsx  PracticeFeedback.tsx  PracticeInput.tsx  PracticeOriginalText.tsx  PracticeTarget.tsx  PracticeView.tsx
src/features/practice/hooks/: useProofread.ts
src/features/settings/: SettingsTest.tsx  SettingsView.tsx
src/features/settings/components/: ApiKeyManager.tsx  WebLLMSettings.tsx
src/features/settings/hooks/: useBackup.ts
src/hooks/: useCapture.ts  useCredentials.ts  usePronunciation.ts  useSentences.ts  useUpdateTranslation.ts
src/hooks/credentials/: useCredentialQuery.ts
src/types/: index.ts  ipc.ts
(+10 files in other folders)
