[package]
name = "sentence_binder"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sentence_binder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
tokio = { version = "1.52.1", features = ["full"] }
core-foundation = "0.10.1"
core-graphics = "0.25"
arboard = "3.6.1"
lazy_static = "1.5.0"
keyring-core = "1.0.0"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
wiremock = "0.6.5"
